<resources>
    <string name="app_name">TimeCounter</string>
    <string name="estadoBT_conectado">Connected</string>
    <string name="estadoBT_desconectado">Disconnected</string>
    <string name="acceleration">Acceleration</string>
    <string name="skidpad">Skidpad</string>
    <string name="autocross">Autocross</string>
    <string name="endurance">Endurance</string>
    <string name="last">Last</string>
    <string name="best">Best</string>
    <string name="noBluetooth">This device do not have Bluetooth</string>
    <string name="bluetoothActivado">Bluetooth Enabled</string>
    <string name="bluetoothNoActivado">Bluetooth could not be enabled</string>
    <string name="NoEscriureSD">Cannot Write to External Storage.</string>
    <string name="ArxiuGuardat">File Saved</string>
    <string name="noCrearCarpeta">Unable to create directory</string>
    <string name="dialogoGuardar">Save data in file?</string>
    <string name="exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="errorGuardar">File not saved, try again?</string>
    <string name="time">Time [s]</string>
    <string name="average">Average [s]</string>
    <string name="noLlegir">Cannot Read from External Storage.</string>
    <string name="noArxius">No files are found</string>
    <string name="noSend">Data not sent</string>
    <string name="BTenviado">Data sent</string>
    <string name="BTnotConnected">BT not connected</string>
</resources>
