<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/txtEstadoBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/estadoBT_desconectado"
        app:layout_constraintBottom_toBottomOf="@+id/imgBluetooth"
        app:layout_constraintEnd_toStartOf="@+id/imgBluetooth"
        app:layout_constraintTop_toTopOf="@+id/imgBluetooth" />

    <ImageView
        android:id="@+id/imgBluetooth"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorAccent" />

    <ImageView
        android:id="@+id/viewSeparador"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="16dp"
        android:layerType="software"
        android:src="@drawable/dotted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBluetooth" />

    <ImageView
        android:id="@+id/imgSkidpad"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:onClick="skidpad"
        app:layout_constraintEnd_toEndOf="@+id/imgAcceleration"
        app:layout_constraintStart_toStartOf="@+id/imgAcceleration"
        app:layout_constraintTop_toBottomOf="@+id/imgAcceleration"
        app:srcCompat="@color/colorAccent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:text="@string/acceleration"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgAcceleration"
        app:layout_constraintStart_toEndOf="@+id/imgAcceleration"
        app:layout_constraintTop_toTopOf="@+id/imgAcceleration" />

    <ImageView
        android:id="@+id/imgAutocross"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:onClick="autocross"
        app:layout_constraintEnd_toEndOf="@+id/imgSkidpad"
        app:layout_constraintStart_toStartOf="@+id/imgSkidpad"
        app:layout_constraintTop_toBottomOf="@+id/imgSkidpad"
        app:srcCompat="@color/colorAccent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skidpad"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgSkidpad"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/imgSkidpad" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autocross"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgAutocross"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/imgAutocross" />

    <ImageView
        android:id="@+id/imgEndurance"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:onClick="endurance"
        app:layout_constraintEnd_toEndOf="@+id/imgAutocross"
        app:layout_constraintStart_toStartOf="@+id/imgAutocross"
        app:layout_constraintTop_toBottomOf="@+id/imgAutocross"
        app:srcCompat="@color/colorAccent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endurance"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgEndurance"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/imgEndurance" />

    <ImageView
        android:id="@+id/imgAcceleration"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:onClick="acceleration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSeparador"
        app:srcCompat="@color/colorAccent" />


    <ImageView
        android:id="@+id/imgAjustes"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgEstadisticas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgEndurance"
        android:onClick="bluetooth"
        app:srcCompat="@color/colorAccent" />

    <ImageView
        android:id="@+id/imgEstadisticas"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgAjustes"
        app:layout_constraintTop_toTopOf="@+id/imgAjustes"
        android:onClick="estadistiques"
        app:srcCompat="@color/colorAccent" />


</android.support.constraint.ConstraintLayout>